[gd_scene load_steps=5 format=3 uid="uid://b45p8nijrvd3v"]

[ext_resource type="Script" path="res://src/ui/browser/browser.gd" id="1_pepdc"]
[ext_resource type="Script" path="res://src/ui/browser/tree.gd" id="2_3wiph"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l6x4e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_negji"]

[node name="Browser" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_l6x4e")
script = ExtResource("1_pepdc")
path = "C:\\Users\\Innaias\\Documents\\folder\\fishy-shaders-3"

[node name="BrowserTree" type="Tree" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_negji")
script = ExtResource("2_3wiph")

[connection signal="button_clicked" from="BrowserTree" to="BrowserTree" method="_on_button_clicked"]
[connection signal="empty_clicked" from="BrowserTree" to="BrowserTree" method="_on_empty_clicked"]
[connection signal="item_collapsed" from="BrowserTree" to="BrowserTree" method="_on_item_collapsed"]
[connection signal="item_selected" from="BrowserTree" to="BrowserTree" method="_on_item_selected"]
